feat: adiciona suporte a parcelas de empréstimos, incluindo DTO, novas rotas e ajustes na interface